--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "ssh-key-generator",
     "displayName": "SSH key generator",
     "description": "This extension will generate key to be used by SSH protocol and Remote-SSH extension. It will deploy it on the remote server and update the ssh config file.",
-    "version": "1.2.0",
+    "version": "1.1.0",
     "publisher": "amadeus",
     "repository": {
         "type": "github",
@@ -86,23 +86,29 @@
         "publish minor": "vsce publish minor -m 'Release v%s'",
         "publish major": "vsce publish major -m 'Release v%s'",
         "version": "auto-changelog -p && git add CHANGELOG.md",
-        "pre-commit": "npm run npm_reinstall && npm run recompile && npm run test && npm run fix-lint && npm run lint && npm run package && npm pack"
+        "pre-commit": "npm run npm_reinstall && npm run recompile && npm run test && npm run fix-lint && npm run lint && npm run package"
     },
     "devDependencies": {
+        "@istanbuljs/nyc-config-typescript": "^1.0.2",
         "@types/glob": "^7.2.0",
         "@types/mocha": "^9.1.1",
         "@types/node": "^14.14.41",
+        "@types/rimraf": "^3.0.2",
         "@types/vscode": "^1.54.0",
-        "@typescript-eslint/eslint-plugin": "^5.18.0",
-        "@typescript-eslint/parser": "^5.18.0",
+        "@typescript-eslint/eslint-plugin": "^5.33.1",
+        "@typescript-eslint/parser": "^5.33.1",
         "@vscode/test-electron": "^2.1.3",
         "auto-changelog": "^2.2.0",
         "eslint": "^8.12.0",
+        "eslint-config-prettier": "^8.5.0",
         "fsify": "^5.0.0",
         "glob": "^7.1.5",
         "mocha": "^9.1.1",
         "mock-os": "^1.0.0",
+        "nyc": "^15.1.0",
         "rimraf": "^3.0.2",
+        "source-map-support": "^0.5.21",
+        "ts-node": "^10.9.1",
         "typescript": "^4.4.4",
         "vsce": "^2.7.0"
     },
