--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "ssh-key-generator",
     "displayName": "SSH key generator",
     "description": "This extension will generate key to be used by SSH protocol and Remote-SSH extension. It will deploy it on the remote server and update the ssh config file.",
-    "version": "1.1.0",
+    "version": "1.0.0",
     "publisher": "amadeus",
     "repository": {
         "type": "github",
@@ -82,11 +82,15 @@
         "package": "vsce package -o ssh-key-generator.vsix",
         "installExtension": "code --install-extension ssh-key-generator.vsix --force",
         "publish": "vsce publish",
-        "publish patch": "vsce publish patch -m 'Release v%s'",
-        "publish minor": "vsce publish minor -m 'Release v%s'",
-        "publish major": "vsce publish major -m 'Release v%s'",
+        "publishVersion": "vsce publish $npm_config_newversion -m \"Release v%s\"",
+        "publish patch": "vsce publish patch -m \"Release v%s\"",
+        "publish minor": "vsce publish minor -m \"Release v%s\"",
+        "publish major": "vsce publish major -m \"Release v%s\"",
+        "getCurrentVersion": "npm pkg get version | xargs echo",
+        "changelog": "auto-changelog -p",
         "version": "auto-changelog -p && git add CHANGELOG.md",
         "pre-commit": "npm run npm_reinstall && npm run recompile && npm run test && npm run fix-lint && npm run lint && npm run package"
+
     },
     "devDependencies": {
         "@istanbuljs/nyc-config-typescript": "^1.0.2",
