--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,12 @@ out
 node_modules
 *.vsix
 .vscode-test
+.nyc_output/**
+coverage/**
+.vscode/**
+.vscode-test/**
+out/test/**
 *.tgz
 package-lock.json
+.nyc_output
+coverage
