--- a/package.json
+++ b/package.json
@@ -104,7 +104,11 @@
         "mock-os": "^1.0.0",
         "rimraf": "^3.0.2",
         "typescript": "^4.4.4",
-        "vsce": "^2.7.0"
+        "vsce": "^2.7.0",
+        "nyc": "^15.1.0",
+        "source-map-support": "^0.5.21",
+        "ts-node": "^10.9.1",
+        "@istanbuljs/nyc-config-typescript": "^1.0.2"
     },
     "dependencies": {
         "node-ssh": "^12.0.1",
